# CueProfit

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/attribution/: page.tsx
apps/web/src/app/dashboard/campaigns/: page.tsx
apps/web/src/app/dashboard/costs/: actions.ts  page.tsx
apps/web/src/app/dashboard/feed-health/: page.tsx
apps/web/src/app/dashboard/incrementality/: page.tsx
apps/web/src/app/dashboard/mmm/: page.tsx
apps/web/src/app/dashboard/products/: page.tsx
apps/web/src/app/dashboard/recommendations/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: google-glyph.tsx  sign-out-button.tsx  theme-toggle.tsx
apps/web/src/components/app/: cards.tsx  connect-flash.tsx  controls.tsx  data-source-empty.tsx  date-range-picker.tsx  icons.tsx  measurement-page.tsx  overview.tsx  page-header.tsx  placeholder-page.tsx  product-costs-form.tsx  search-field.tsx  sidebar.tsx  sync-now-button.tsx  workspace-sources-compact.tsx  workspace-sources-panel.tsx  workspace-status-strip.tsx  workspace-topbar.tsx
apps/web/src/lib/: dashboard-workspace.ts  dashboard.ts  ensure-workspace.ts  feed-health.ts  fuzzy.ts  measurement.ts  workspace.ts
apps/web/src/lib/supabase/: admin.ts  middleware.ts  server.ts
docs/: google-ads-api-overview.md
services/api/: Dockerfile  pyproject.toml
services/api/src/cueprofit_api/: __init__.py  ai_api.py  connect_api.py  connections.py  env.py  main.py  oauth.py  settings.py  sync_api.py  worker_trigger.py
services/api/src/cueprofit_api/ai/: __init__.py  runner.py  tools.py
services/api/tests/: test_ai_api.py  test_ai_runner.py  test_connect_api.py  test_connections.py  test_health.py  test_oauth.py  test_sync_api.py
services/workers/: Dockerfile  pyproject.toml
services/workers/scripts/: deploy-gcp.sh
services/workers/src/cueprofit_workers/: __init__.py  ads_auth.py  cli.py  dates.py  env.py  pipeline.py  profit.py  recommendations.py  resolve.py  settings.py  stores.py  sync_ads.py  sync_all.py  sync_merchant.py  tokens.py
services/workers/tests/: test_dates.py  test_dispatch.py  test_pipeline.py  test_profit.py  test_recommendations.py  test_sync.py  test_sync_all.py  test_sync_merchant.py  test_tokens.py
supabase/migrations/: 20260529120100_init_extensions_helpers.sql  20260529120200_core_tenancy.sql  20260529120400_catalog.sql  20260529120600_profit_and_recommendations.sql  20260529150739_connections.sql  20260529150815_stats_and_fx.sql  20260529150854_ops_ai_billing.sql  20260529151910_security_perf_hardening.sql  20260531000100_measurement_models.sql  20260531001000_google_ads_measurement_inputs.sql
(+6 files in other folders)
