[project]
name = "cueprofit-api"
version = "0.0.0"
description = "CueProfit FastAPI service (Cloud Run): profit reads + AI tool-runner"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "cueprofit-profit-engine",
    "cueprofit-security[kms]",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cueprofit_api"]

[tool.uv.sources]
cueprofit-profit-engine = { path = "../../packages/profit-engine", editable = true }
cueprofit-security = { path = "../../packages/security", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient emits a transitional httpx deprecation notice; not ours.
    "ignore:Using `httpx` with `starlette.testclient`:Warning",
]

[tool.uv]
package = true
